Hoàn thiện trang quản trị và tối ưu giao diện admin